--- a/面试准备/数据结构/数据结构.md
+++ b/面试准备/数据结构/数据结构.md
@@ -6,6 +6,12 @@
 
 ### 1.1 增强for (T t : Collection) 底层也是iterator遍历
 
+### 1.2 ConcurrentModificationException
+
+fast-fail 机制，在操作时发现count和预期的不一致。
+
+https://blog.csdn.net/u013833031/article/details/108756109
+
 ## 2. ArrayList
 
 ### 2.1 扩容机制
@@ -77,7 +83,6 @@ private void grow(int minCapacity) {
 ### 3.1 Vector和ArrayList比较
 
 - 如果是无参构造器，默认都是10个长度
-
 - Vector线程安全/效率低，ArrayList反之。
 - 扩容倍数：**vector为2倍，ArrayList为1.5**
 
@@ -274,34 +279,28 @@ public boolean add(E e) {
 ### 6.1 底层
 
 - 底层是数组+链表+红黑树(jdk8)
-
 - 添加流程：
+
   - 先得到Key的hash值（转换为索引值） (h = key.hashCode()) ^ (h >>> 16);
   - 在存储数据表table中，查看该索引位置是否有存值
   - 没有则直接加入
   - 有则调用equals方法依次与该索引中的其他元素比较，相同则放弃添加，不同则添加到最后
   - 在JAVA8中，如果一条链表的元素个数(TREEIFY_THRESHOLD)到达8个(默认)，并且数据表table中的大小>=MIN_TREEIFY_CAPACITY(默认64)，就会进行树化(红黑树)
-
 - 扩容resize
 
   - 扩容：计算出新长度size和新临界值threshold
-
   - 扩容规则：
 
     1.0 首次扩容（容量+临界值）
-    	newCap = DEFAULT_INITIAL_CAPACITY(1 << 4）= 16
-            newThr = (int)(DEFAULT_LOAD_FACTOR(0.75f) * DEFAULT_INITIAL_CAPACITY(1 << 4）); = 12
+    newCap = DEFAULT_INITIAL_CAPACITY(1 << 4）= 16
+    newThr = (int)(DEFAULT_LOAD_FACTOR(0.75f) * DEFAULT_INITIAL_CAPACITY(1 << 4）); = 12
     1.1. oldSize > MAXIMUM_CAPACITY(1<<30) ,临界值threshold = Integer.MAX_VALUE，不再扩容
     1.2. newCap和newThr各扩容一倍（size<1）
-
   - 从老数据拷贝到新数据中Node[]
-
-  - 
-     put方法一共有三处地方扩容：
-          // 1.put的时候发现超过临界值
-          // 2. 首次put
-          // 3. 调用树化方法时，发现table.length还未达到MIN_TREEIFY_CAPACITY(64)
-
+  - put方法一共有三处地方扩容：
+    // 1.put的时候发现超过临界值
+    // 2. 首次put
+    // 3. 调用树化方法时，发现table.length还未达到MIN_TREEIFY_CAPACITY(64)
 - 树化（红黑树）treeifyBin，满足以下条件
 
   A. 如果链表的长度>=TREEIFY_THRESHOLD - 1=7,即链表达到8长度，那么则进入树化方法，但是还需判断B
@@ -529,7 +528,7 @@ final Node<K,V>[] resize() {
 */
 final void treeifyBin(Node<K,V>[] tab, int hash) {
     int n, index; Node<K,V> e;
-    
+  
     if (tab == null || (n = tab.length) < MIN_TREEIFY_CAPACITY)
         resize();
     else if ((e = tab[index = (n - 1) & hash]) != null) {
@@ -565,25 +564,22 @@ public V remove(Object key) {
 下面这题，最终size为4
 
 1. 在remove(p1)时，p1(1001,"CC")的hash在table中找不到，因此无法删除
-
 2. set.add(new Person(1001, "CC"))此时算出来的hash和p1不重叠，因此可以插入
-
 3. set.add(new Person(1001, "AA"))时，此时map里面存的都是new Person(1001, "CC"),因此还是可以插入(hash一样，但是equals不一样，因此被判别成不同对象)
 
    hash分布：
 
    1001,"AA" ====>  **new Person(1001, "CC")**  --next->  new Person(1001, "AA")
 
-   1002,"BB" ====> new Person(1002, "BB") 
+   1002,"BB" ====> new Person(1002, "BB")
 
-   1001,"CC" ====>  new Person(1001, "CC") 
+   1001,"CC" ====>  new Person(1001, "CC")
 
 ![1620725666009](img\HashMap的remove题目.png)
 
 ### 6.3 与JDK7对比
 
 - JDK数据结构为数组+链表
-
 - 链表的插入位置（头/尾）
 
   - JDK7是头插法
@@ -594,7 +590,7 @@ public V remove(Object key) {
       table[bucketIndex] = new Entry<>(hash, key, value, e);
       size++;
   }
-  
+
   Entry(int h, K k, V v, Entry<K,V> n) {
       value = v;
       // next = table[bucketIndex]
@@ -622,7 +618,28 @@ public V remove(Object key) {
   }
   ```
 
-  
+### 6.4 computeIfPresent
+
+有值时插入，如果插入的value为null，则removeKey
+
+```java
+public V computeIfPresent(K key, BiFunction<? super K, ? super V, ? extends V> remappingFunction) {
+    if (remappingFunction == null)
+        throw new NullPointerException();
+    Node<K,V> e; V oldValue;
+    int hash = hash(key);
+    if ((e = getNode(hash, key)) != null &&  (oldValue = e.value) != null) {
+        V v = remappingFunction.apply(key, oldValue);
+        if (v != null) {
+            e.value = v;
+   	    afterNodeAccess(e);
+            return v;
+        } else
+	    removeNode(hash, key, null, false, true);
+    }
+    return null;
+}
+```
 
 ## 7. LinkedHashSet
 
@@ -643,9 +660,7 @@ HashSet(int initialCapacity, float loadFactor, boolean dummy) {
 ### 8.1 底层
 
 - 数组+**双向链表**+红黑树(jdk8)
-
 - 根据hashcode决定存储位置，链表存储决定了数据的有序性
-
 
 ![1620693701429](img\LinkedHashMap底层机制.png)
 
@@ -857,10 +872,10 @@ final Node<K,V> getNode(int hash, Object key) {
 
 ### 9.1 和HashMap比较
 
-|           | 版本 |          线程安全           | 效率 | 底层数据结构             |                            null值                            |
-| :-------: | :--: | :-------------------------: | :--: | ------------------------ | :----------------------------------------------------------: |
-|  HashMap  | 1.2  |           不安全            |  高  | 数组+链表+红黑树（jdk8） |                             允许                             |
-| Hashtable | 1.0  | 安全(推荐ConcurrentHashMap) | 较低 | 数组+链表                | **不允许null的key和value**(NullPointerException,ConcurrentHashMap也不允许) |
+|          | 版本 |          线程安全          | 效率 | 底层数据结构             |                                      null值                                      |
+| :-------: | :--: | :-------------------------: | :--: | ------------------------ | :------------------------------------------------------------------------------: |
+|  HashMap  | 1.2 |           不安全           |  高  | 数组+链表+红黑树（jdk8） |                                       允许                                       |
+| Hashtable | 1.0 | 安全(推荐ConcurrentHashMap) | 较低 | 数组+链表                | **不允许null的key和value**(NullPointerException,ConcurrentHashMap也不允许) |
 
 ### 9.2 源码解读
 
@@ -1019,7 +1034,7 @@ static final class Entry<K,V> implements Map.Entry<K,V> {
 }
 ```
 
-## 12. TreeMap：有序Map	
+## 12. TreeMap：有序Map
 
 ### 12.2 源码解读
 
@@ -1163,36 +1178,32 @@ private void fixAfterInsertion(Entry<K,V> x) {
 
 左边的节点总是小于右边的节点的二叉树
 
-**二叉搜索树从上投影是有序的** 
+**二叉搜索树从上投影是有序的**
 
 ![1621517969401](img\二叉搜索树从上投影是有序的.png)
 
 - 二叉搜索树的遍历（命名规则：根在前中后）
+
   - **中序遍历**： 左 ->**根**-> 右 ,遍历出来时有序的
   - 前序遍历：**根** -> 左 -> 右
   - 后序遍历：左 -> 右 -> **根**
-
 - 二叉搜索树找最大和最小值
 
   - 最小值： 一直left(),直至left.left=null
   - 最大值： 一直right(),直至right.right= null
-
 - 二叉搜索树的删除
 
   - 没有子节点：删除树(即该子节点的父节点)对该子节点的引用
   - 1个子节点：该子节点的父节点指向该子节点的子节点
   - 2个子节点： 由该子节点的**后继节点（该子节点右侧的最小节点[如果不用最小节点，那么右侧还需要移动到新节点的左侧，工作量巨大]）**补上。
-
 - **另一种删除思路：逻辑删除**
 
   删除需要移动树，因此可以增加一个删除属性，在查询前都多增加一个是否删除判断即可。
-
 - 二叉搜索树和数组/链表比较
 
   - 数组的高效查询算法有二分查找，但是依赖数组有序，而且插入(一堆元素需要后移)和扩容都麻烦
   - 链表则是不好遍历
   - 二分查找树则是查找新增都很方便
-
 - 二叉搜索树的致命缺陷：畸形树
 
   如果二叉搜索树的元素全部堆积在一边，那么树就退化成链表了，搜索效率变低
@@ -1204,7 +1215,6 @@ private void fixAfterInsertion(Entry<K,V> x) {
 ### 13.2 AVL树（平衡树）
 
 - AVL树 = 二叉搜索树 + 平衡左右树高度差不大于1（通过左旋/右旋控制）
-
 - 为什么有AVＬ树还需要红黑树？
 
   AVL树虽然解决的二叉搜索树的致命缺点，但不是最佳解。因为条件太过苛刻(左右树高度差<=1)，
@@ -1216,13 +1226,9 @@ private void fixAfterInsertion(Entry<K,V> x) {
 #### 13.3.1  红黑树的性质
 
 - 每个节点要么是黑色，要么是红色
-
 - **根节点是黑色**
-
 - 每个叶子节点是黑色的
-
 - 每个红色节点的子节点一定是黑色的，即**不能有2个红色节点相连（旋转的依据）**
-
 - 任意节点到每个叶子节点的路径都包含数量相同的黑节点(**每条链路黑色数相同)，俗称黑高**！
 
   因此，如果一个黑节点有一个黑子节点，那么该黑节点一定有两个节点（左右都有节点）
@@ -1238,13 +1244,11 @@ private void fixAfterInsertion(Entry<K,V> x) {
 - 三大方式
 
   - **变色** ：
-
   - **左旋**：以某个节点E为旋转节点，把旋转节点E的右子节点S变成旋转节点E的父节点，再把右子节点S的左子树变成旋转节点的右子树
 
     即：S.left = E, E.parent=S; E.right=S.left
 
     ![1621562825221](img\红黑树左旋.gif)
-
   - **右旋**：以某个节点S为旋转节点，把旋转节点S的左子节点E变成旋转节点S的父节点，再把左子节点E的右子节点变成旋转节点S的左子节点。
 
     即： E.right=S, S.parent=E; S.left=E.right
@@ -1260,71 +1264,68 @@ private void fixAfterInsertion(Entry<K,V> x) {
 
 **注意**：
 
-​	插入节点，必须为红色，因为红色再父节点（如果存在）为黑色节点时，**红黑色的黑色平衡没有被破坏**，无需做自平衡。 
+    插入节点，必须为红色，因为红色再父节点（如果存在）为黑色节点时，**红黑色的黑色平衡没有被破坏**，无需做自平衡。
 
-​	如果插入黑色，那么黑色平衡遭到破坏，必须做自平衡。
+    如果插入黑色，那么黑色平衡遭到破坏，必须做自平衡。
 
 #### 13.3.5 红黑树插入场景分析
 
 1. 红黑树为空数：
 
    直接插入就好，但是根节点需要插入黑色。
-
 2. 插入节点的key已存在：
 
    更新存在节点的value即可
-
 3. 插入的节点的父节点为黑色：
 
    直接插入即可，因为插入节点为黑色，不影响平衡
-
-4. **插入的节点父节点为红色（主要逻辑）** 
+4. **插入的节点父节点为红色（主要逻辑）**
 
    4.1 叔叔节点(父的兄弟节点)也为红色
 
-   ​	那么爷爷节点一定为黑色，因为不可能红红相连，而插入节点为红色，因此会变成黑红红。**最简单的做法**	
+   那么爷爷节点一定为黑色，因为不可能红红相连，而插入节点为红色，因此会变成黑红红。**最简单的做法**
 
-   ​	**就是变色，把爷爷节点变红，把父叔节点变黑，这样可以达到黑色完美平衡**。然后再处理爷爷节点(制成
+   **就是变色，把爷爷节点变红，把父叔节点变黑，这样可以达到黑色完美平衡**。然后再处理爷爷节点(制成
 
-   ​	当前节点)，处理爷爷节点主要**看爷爷的父节点是什么颜色**，如果是黑色不用管，**红色破坏了红红补相连**
+   当前节点)，处理爷爷节点主要**看爷爷的父节点是什么颜色**，如果是黑色不用管，**红色破坏了红红补相连**
 
-   ​	**原则，需要按上述步骤(步骤4)重新处理爷爷节点(当前节点)** 
+   **原则，需要按上述步骤(步骤4)重新处理爷爷节点(当前节点)**
 
    ![1621522103363](img\红黑树插入场景4.1.png)
 
    4.2 叔叔节点不存在或为黑色，并且插入的节点的父节点是爷爷节点的左子节点（即往爷爷左树插入）
 
-   ​	4.2.1 插入节点为该节点的父节点的左子节点（LLr左左红）
+   4.2.1 插入节点为该节点的父节点的左子节点（LLr左左红）
 
-   ​	1）变色：**父爷换色**
+   1）变色：**父爷换色**
 
-   ​	2）旋转：**以爷爷节点为支点进行右旋**
+   2）旋转：**以爷爷节点为支点进行右旋**
 
    ![1621522448525](img\红黑树插入场景4.2.1LLr左左红.png)
 
-   ​	4.2.2 插入节点为该节点的父节点的右子节点（LRr左右红）
+   4.2.2 插入节点为该节点的父节点的右子节点（LRr左右红）
 
-   ​	1）左旋：**以父节点为支点左旋(设置原父节点为当前节点)**
+   1）左旋：**以父节点为支点左旋(设置原父节点为当前节点)**
 
-   ​	2）然后就成了4.2.1，重复4.2.1即可（变色+右旋）
+   2）然后就成了4.2.1，重复4.2.1即可（变色+右旋）
 
    ![1621522482217](img\红黑树插入场景4.2.2LRr左右红.png)
 
    4.3 叔叔节点不存在或为黑色，并且插入的节点的父节点是爷爷节点的右子节点（即往爷爷右树插入），4.3其实是4.2反过来，逻辑左右处理相反即可。
 
-   ​	4.3.1 插入节点为该节点的父节点的右子节点（RRr右右红）
+   4.3.1 插入节点为该节点的父节点的右子节点（RRr右右红）
 
-   ​	1）变色：父爷换色
+   1）变色：父爷换色
 
-   ​	2）左旋：以爷爷节点为指点左旋
+   2）左旋：以爷爷节点为指点左旋
 
    ![1621522816908](img\红黑树插入场景4.3.1RLr右左红.png)
 
-   ​	4.3.2 插入节点为该节点的父节点的左子节点（RLr右左红）
+   4.3.2 插入节点为该节点的父节点的左子节点（RLr右左红）
 
-   ​	1）右旋：以父节点为指点右旋
+   1）右旋：以父节点为指点右旋
 
-   ​	2）同4.3.1一样（换色+左旋）
+   2）同4.3.1一样（换色+左旋）
 
    ![1621522992698](img\红黑树插入场景4.3.2RRr右右红.png)
 
@@ -1818,59 +1819,11 @@ final V putVal(K key, V value, boolean onlyIfAbsent) {
             V oldVal = null;
             // f = tabAt(tab, i = (n - 1) & hash) 可以看出锁的粒度为一条链表，即table数组的一个元素
             synchronized (f) {
-				// .. 	
+				// .. 
             }
         }
     }
 }
 ```
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 ![1621518701303](C:\Users\ASUS\AppData\Local\Temp\1621518701303.png)
